<resources>
    <string name="app_name">CoverStar</string>
    <string name="scheme">coverstar</string>
    <string name="channel_name">알림</string>
    <string name="notification_channel_id">CoverStar</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="close">닫기</string>
    <string name="information">안내</string>
    <string name="change">변경</string>
    <string name="network_not_connected">네트워크 연결 상태를 확인해주세요.</string>
    <string name="try_later">잠시 후 다시 시도해 주세요</string>
    <string name="report_done">신고 되었습니다.</string>
    <string name="delete_done">삭제 되었습니다.</string>
    <string name="find_best_cover_star">최고의 커버스타를\n찾아라</string>
    <string name="round_info">%d월 ROUND</string>
    <string name="original_singer_format">(원곡가수 : %s)</string>
    <string name="write_comment">댓글 추가</string>
    <string name="write_reply">답글 추가</string>
    <string name="write_comment_hint">댓글을 입력하세요</string>
    <string name="write_reply_hint">답글을 입력하세요</string>

    <string name="login">로그인</string>
    <string name="join">가입하기</string>
    <string name="rule_agree">약관 동의</string>
    <string name="rule_agree_detail">약관 상세보기</string>
    <string name="use_rule">이용 약관</string>
    <string name="use_rule_agree_need">이용 약관에 동의해주세요.</string>
    <string name="agree_all_rule">모든 약관에 동의합니다.</string>
    <string name="agree_use_rule">[필수] 이용자 약관에 동의</string>
    <string name="agree_private_rule">[필수] 개인정보 처리방침 동의</string>

    <string name="phone_cert">본인 인증</string>
    <string name="phone_cert_agree_need">본인 인증을 진행합니다.</string>
    <string name="phone_input_hint">‘-’를 제외한 휴대폰 번호를 입력해주세요.</string>

    <string name="cert_num_send">인증번호 발송 완료</string>
    <string name="cert_num_send_complete">인증번호를 발송하였습니다</string>
    <string name="send">발송</string>

    <string name="insert_sended_number">전송된 인증번호를 입력하세요.</string>
    <string name="sended_number">전송된 인증번호</string>

    <string name="insert_six_number">인증번호 6자리를 입력하세요.</string>
    <string name="resend">재전송</string>
    <string name="cert_complete">인증완료</string>
    <string name="remain_time_format" formatted="false">%02d:%02d 남음</string>

    <string name="profile_image_nickname_setting">프로필 이미지와 닉네임을 설정해 주세요.</string>
    <string name="nickname_hint">닉네임을 입력해주세요.</string>
    <string name="nickname_guide">한글/영문/숫자를 사용하여 2~10자 이내</string>
    <string name="nickname_input">닉네임을 입력해주세요.</string>

    <string name="starchain_start">스타체인 지갑을 생성합니다.</string>
    <string name="starchain_info">스타체인은\n커버스타의 모든 서비스에 사용되는\n블록체인 기반의 코인입니다.\n향후 서비스 예정인\n펫스타, 스타뮤직, 스타마켓 등\n스타월드와 관련된 모든 서비스 역시\n스타페인을 기반으로\n운영될 예정입니다.</string>

    <string name="password_setting">비밀번호를 설정해주세요.</string>
    <string name="password_confirm">비밀번호를 확인해주세요.</string>
    <string name="password_input">비밀번호를 입력해주세요.</string>
    <string name="reset_password">비밀번호 재설정</string>

    <string name="password_reset_first">재설정할 비밀번호 6자리를 입력해 주세요.</string>
    <string name="password_login_first">회원가입 시 스타체인 지갑 생성을 위해 설정한\n비밀번호 6자리를 입력해 주세요.</string>
    <string name="password_login_second">비밀번호를 다시 입력해 주세요.</string>

    <string name="password_not_same">입력하신 비밀번호가 일치하지 않습니다.</string>
    <string name="agree_password_use">비밀번호 주의사항에 동의해 주세요.</string>

    <string name="password_use">스타체인과 관련된 모든 거래시\n비밀번호를 입력합니다.</string>
    <string name="password_reinput">입력하신 비밀번호 6자리를\n다시 한번 입력해 주세요.</string>
    <string name="password_need_remember">비밀번호를 꼭 기억해 주세요</string>
    <string name="password_warning">블록체인 기술 기반의 스타체인 지갑과 연동이 되어있어,\n비밀번호 복구 및 재설정이 불가능 하며,\n분실에 대한 책임은 본인에게 있습니다.</string>
    <string name="agree">동의합니다.</string>

    <string name="password_forgot">비밀번호를 분실한 경우</string>
    <string name="password_forgot_description">블록체인 기술 기반의 스타체인 지갑과 연동이 되어있어,\n비밀번호 복구 및 재설정이 불가능 합니다.\n\n비밀번호 분실에 따른 재가입 문의는\nhelp@coverstar.world로 문의 주세요.</string>

    <string name="registered_num">가입하신 번호</string>
    <string name="insert_registered_num">가입하신 번호를 입력해주세요.</string>

    <string name="welcome_user">%s님 반갑습니다.</string>
    <string name="login_hint">다른 사용자로 로그인 할 경우\n해당 사용자의 휴대폰 번호를 입력해 주세요.</string>

    <string name="input_invite_code">추천코드를 입력해 주세요.</string>
    <string name="input_invite_code_reward">커버스타를 추천한 친구의 추천코드를 입력하면\n3P를 선물로 드립니다</string>
    <string name="input_invite_code_reward_3star">3P</string>

    <string name="backpressed_finish">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="next">다음</string>
    <string name="send_phone_auth">인증번호 전송</string>
    <string name="agree_done">동의하기</string>

    <string name="congratulation">축하합니다.</string>
    <string name="all_setting_completed">모든 설정이 완료되었습니다.</string>
    <string name="introduce1">매월 상금 1,000만원!\n12월 파이널 무대\n총상금 10억!</string>
    <string name="coverstar">커버스타</string>
    <string name="try_now">지금 바로 도전하세요!</string>

    <string name="no_search_result">검색 결과가 없습니다.</string>
    <string name="search">검색</string>
    <string name="search_input_hint">검색어를 입력하세요</string>

    <string name="original_singer">원곡가수 :</string>

    <string name="alarm">알림</string>
    <string name="setting">설정</string>
    <string name="logout">로그아웃</string>
    <string name="edit_profile">개인 정보</string>
    <string name="notice">공지 사항</string>
    <string name="version">버전</string>

    <string name="menu">메뉴</string>

    <string name="order_popular">인기순</string>
    <string name="order_search">조회순</string>
    <string name="order_recently">최신순</string>

    <string name="fix">고정</string>
    <string name="fix_release">고정해제</string>
    <string name="delete">삭제</string>
    <string name="report">신고</string>
    <string name="report_do">신고하기</string>
    <string name="report_do_complete">신고 되었습니다.</string>

    <string name="regist">신청하기</string>
    <string name="song_title">노래 제목(타이틀)</string>
    <string name="song_title_hint">제목을 입력해 주세요.</string>
    <string name="singer_name">가수이름(서브타이틀)</string>
    <string name="singer_name_hint">이름을 입력해 주세요.</string>
    <string name="media_link">영상링크</string>
    <string name="media_link_hint">https://www.youtube.com/watch?v=aM9cPsVjOxQ</string>
    <string name="mention">한마디</string>
    <string name="mention_hint">감사합니다.</string>
    <string name="participate_count">※ 참가 신청을 위해 %s가 사용됩니다.</string>
    <string name="coin_count_format">%sP</string>

    <string name="select_season_round">참가신청할 시즌 라운드를 선택해 주세요</string>
    <string name="input_song_title">노래 제목을 입력해 주세요</string>
    <string name="input_singer_name">가수이름을 입력해 주세요</string>
    <string name="input_media_link">영상링크를 입력해 주세요</string>
    <string name="input_mention">한마디 입력해 주세요</string>

    <string name="regist_confirm">신청하기 확인</string>
    <string name="participate_count_confirm">%s를 사용해서 참여 하시겠습니까?</string>
    <string name="point_check_message">포인트가 없습니다. 포인트 충전 후 신청해주세요</string>
    <string name="point_check">포인트 확인</string>
    <string name="regist_complete">%s에 참가 신청 되었습니다</string>

    <string name="epilogue">에필로그</string>
    <string name="contest_media">경연 영상</string>

    <string name="tab_name_home">홈</string>
    <string name="tab_name_prev_media">지난영상</string>
    <string name="tab_name_participate">참가 신청</string>
    <string name="tab_name_mypage">마이페이지</string>

    <string name="my_wallet">My Wallet</string>
    <string name="buy">구매</string>
    <string name="deposite">입금</string>
    <string name="withdraw">출금</string>
    <string name="charge_point">포인트 충전</string>
    <string name="playlist">재생목록</string>
    <string name="participate_media">참가영상</string>


    <string name="vote">투표하기</string>
    <string name="vote_complete">투표완료</string>
    <string name="pick_my_star">소중한 한표로 나의 스타를 뽑아주세요.</string>
    <string name="vote_help1">※ 투표는 영상당 1회만 가능합니다.</string>
    <string name="vote_help2">※ 투표수는 심사 결과에 반영됩니다.</string>
    <string name="share">공유하기</string>
    <string name="add_to_playlist">재생목록에 추가</string>
    <string name="add_to_playlist_complete">재생목록에 추가 되었습니다.</string>
    <string name="comment">댓글</string>
    <string name="reply">답글</string>
    <string name="follow">팔로우</string>
    <string name="unfollow">언팔로우</string>
    <string name="show_more">&#62; 더보기</string>

    <string name="home_coverstar">Cover Star</string>
    <string name="home_event">Event</string>

    <string name="contest_term" formatted="false">참여기간 : %s~%s</string>
    <string name="contest_total_price">총 상 금 : %s</string>
    <string name="contest_final_date">입상자발표 : %s</string>
    <string name="price_display_format">%s원</string>
    <string name="discount_display_format">%s할인</string>
    <string name="has_point">보유 포인트</string>
    <string name="exchange">충전하기</string>

    <string name="message">메세지</string>
    <string name="no_chatroom_result">대화방이 없습니다.</string>
    <string name="no_chatroom_search_result">검색된 대화방이 없습니다.</string>
    <string name="no_follow_result">팔로우한 사람이 없습니다.</string>
    <string name="send_chat">전송</string>

</resources>