<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/closeLayout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon_close"/>
    </FrameLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/point_check"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/checkBoxImageview"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_height="wrap_content"
        android:src="@drawable/wallet_icon"/>

    <TextView
        android:id="@+id/pointCheckTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_below="@id/checkBoxImageview"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:text="@string/point_check_message"
        android:textColor="@color/subTextColor_6a6a6a"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/closeButton"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/pointCheckTextView"
        android:layout_marginRight="15dp"
        style="@style/RoundCornerWhiteStrokeButtonStyle"
        android:text="@string/close"/>
</RelativeLayout>