<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/closeLayout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon_close"/>
    </FrameLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/regist_confirm"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/checkBoxImageview"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/regist_confirm"/>

    <TextView
        android:id="@+id/participateConfirmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_below="@id/checkBoxImageview"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:textColor="@color/subTextColor_6a6a6a"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/participateConfirmTextView"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            style="@style/RoundCornerWhiteStrokeButtonStyle"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/okButton"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            style="@style/RoundCornerButtonStyle"
            android:text="@string/ok"/>

    </LinearLayout>
</RelativeLayout>