<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/titleLayout"
        layout="@layout/layout_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="25dp"
        android:text="@string/input_invite_code"
        android:textColor="@color/mainTextColor_0e0f0e"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#dddddd" />

    <TextView
        android:id="@+id/inviteCodeRewardTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:text="@string/input_invite_code_reward"
        android:textColor="@color/subTextColor_6a6a6a"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/inviteCodeEditText"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/input_invite_code"
        android:maxLines="1"
        android:textColor="@color/mainTextColor_0e0f0e"
        android:textColorHint="#828382"
        android:textSize="16sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#0e0f0e" />

    <LinearLayout
        android:id="@+id/phoneNumInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/nextButton"
        style="@style/BottomButtonStyle"
        android:text="@string/next" />

</LinearLayout>