<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/titleLayout"
        layout="@layout/layout_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/starChainIntroLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="86dp"
                    android:src="@drawable/logo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="21dp"
                    android:text="@string/starchain_start"
                    android:gravity="center_horizontal"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="#dddddd"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="50dp"
                    android:textColor="@color/subTextColor_6a6a6a"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:paddingStart="45dp"
                    android:paddingEnd="45dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:background="@drawable/rounded_corner_box_f8f8f8_10dp"
                    android:text="@string/starchain_info"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

            </LinearLayout>
        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/nextButton"
        style="@style/BottomButtonStyle"
        android:text="@string/next" />

</LinearLayout>